# tempest

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
docs/: setup-agent-prompt.md
plugins/fps-unlocker/: VkLayer_vortstrap_present_mode.json  build.sh  present_mode_layer.c
plugins/vortex-optim/: build.sh  optimizer.c
src/: auth.rs  config.rs  crypto.rs  doctor.rs  games.rs  logger.rs  main.rs  plugin.rs  updater.rs  uri.rs
src/launcher/: mod.rs  process.rs
src/setup/: dll.rs  dxvk.rs  mod.rs  vkd3d.rs
